src/main/resources/static/loginResources/CSS/homepage.css
body {
    font-family: 'Roboto', sans-serif;
    background-color: #f4f4f9;
}
.navbar {
    background-color: #343a40;
    border-bottom: 2px solid #007a7a;
    justify-content: space-between;
}
.navbar-brand {
    font-size: 1.5rem;
    color: #f8f9fa;
}
.navbar-nav .nav-link {
    color: #f8f9fa;
}
.navbar-nav .nav-link:hover {
    color: #007a7a;
}
.navbar-toggler {
    border-color: #f8f9fa;
}
.login-btn {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: #fff;
}
.center-navbar-text {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    color: #fff;
    font-size: 1.5rem;
}
.navbar-brand img {
    max-height: 90px;
    width: auto;
}
/* Section Styles */
section {
    padding: 4rem 0;
}
.about-section, .contact-section {
    background-color: #fff;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    padding: 5rem 0;
}
.features-section {
    background: linear-gradient(to right, #007a7a, #005d5d);
    color: #fff;
}
.features-section h4 {
    color: #f8f9fa;
}
h2 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    margin-bottom: 2rem;
}
p {
    font-size: 1.1rem;
    line-height: 1.8;
}
.contact-section p {
    font-size: 1.2rem;
}
.divider {
    width: 60px;
    height: 5px;
    background-color: #007a7a;
    margin: 1rem auto 2rem auto;
}
/* Button Styling */
.btn-primary {
    background-color: #007a7a;
    border-color: #007a7a;
    font-size: 1.2rem;
    padding: 0.7rem 1.5rem;
}
.btn-primary:hover {
    background-color: #005d5d;
    border-color: #005d5d;
}

